[gd_scene load_steps=3 format=3 uid="uid://dql2o13n2enh5"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_uhglv"]
[ext_resource type="Texture2D" uid="uid://cdjvvn3giawho" path="res://assets/img/bottle.png" id="4_qj01t"]

[node name="Player" type="CharacterBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 3
script = ExtResource("1_uhglv")

[node name="Bottle" type="Sprite2D" parent="."]
scale = Vector2(0.55, 0.55)
texture = ExtResource("4_qj01t")

[node name="CapPosition" type="Marker2D" parent="Bottle"]
position = Vector2(0, -100)
rotation = -0.00018647
scale = Vector2(1.81818, 1.81818)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-18, 13, -18, 60, 18, 60, 18, 13, 0, -50)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-18, 13, -18, 60, 18, 60, 18, 13, 0, -50)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
